welcome.lessons.welcome.array.array123.Array123.scala.error
array123:6: error: value !=- is not a member of Int
	if(indexOfValue(nums,2)!=-1 && nums(i-1)==1 && nums(i+1)==3){
                               ^